fixed recipe height to fit to recipe length and content.  same with mainImage behind it

--- a/client/src/components/Recipe/Recipe.module.css
+++ b/client/src/components/Recipe/Recipe.module.css
@@ -7,10 +7,11 @@
   margin-top: 74px;
   margin-left: 7px;
   margin-right: 7px;
+  padding-bottom: 7px;
   background-repeat: repeat;
   background-size: cover;
   z-index: -1;
-  height: 250%;
+  height: fit-content;
   display: grid;
   grid-template-columns: 325px 580px 300px;
 }
@@ -35,7 +36,7 @@
 .recipeImg {
   position: relative;
   margin-top: 15px;
-  height: 98%;
+  height: fit-content;
   background-image: url("./page2.png");
   content: "";
   /* opacity: 0.6; */
